--- a/Responsive Web Design/Survey Form/css/style.css
+++ b/Responsive Web Design/Survey Form/css/style.css
@@ -1,36 +1,65 @@
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;1,100;1,800&display=swap');
 
 :root {
-    --color-white: #f3f3f3;
+    --color-background: #1b1b32;
+    --color-secondary-background: #3b3b4f;
     --color-darkblue: #1b1b32;
     --color-gray: rgba(27, 27, 50, 0.8);
     --color-green: #37af65;
-    --color-background: rgb(254, 164, 164);
+    --color-white: #f3f3f3;
 }
 * {
     box-sizing: border-box;
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
 body {
     background-color: var(--color-background);
-    max-width: 1000px;
-    margin: 50px auto;
+    color: var(--color-white);
     font-family: 'Poppins', sans-serif;
-    color: var(--color-white)
+    margin: 50px auto;
+    max-width: 800px;
 }
 
 /* HEADER */
 header {
-    text-align: center;
     margin-bottom: 30px;
+    text-align: center;
 }
 #title {
-    font-weight: 400;
     font-size: 2.5rem;
+    font-weight: 400;
 }
 #description {
-    font-weight: 400;
-    font-style: italic;
     font-size: 1.4rem;
+    font-style: italic;
+    font-weight: 400;
 }
+
+/* MAIN */
+main {
+    background-color: var(--color-secondary-background);
+    border-radius: 4px;
+    margin: auto;
+    max-width: 700px;
+    padding: 40px;
+}
+label {
+    font-size: 1.125rem;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+input {
+    font-size: inherit;
+}
+
+#name, #email, #number {
+    display: block;
+    padding: 5px 10px;
+    width: 100%;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+}
+
