--- a/Responsive Web Design/Survey Form/css/style.css
+++ b/Responsive Web Design/Survey Form/css/style.css
@@ -3,8 +3,7 @@
 :root {
     --color-background: #1b1b32;
     --color-secondary-background: #3b3b4f;
-    --color-darkblue: #1b1b32;
-    --color-gray: rgba(27, 27, 50, 0.8);
+    --color-gray: #495057;
     --color-green: #37af65;
     --color-white: #f3f3f3;
 }
@@ -45,21 +44,60 @@ main {
     padding: 40px;
 }
 label {
+    align-items: center;
+    display: flex;
+    display: block;
     font-size: 1.125rem;
     margin-bottom: 10px;
-    display: flex;
-    align-items: center;
     margin-top: 10px;
 }
-input {
-    font-size: inherit;
+div > label {
+    margin-top: 30px;
+}
+input, textarea {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    color: var(--color-gray);
 }
 
-#name, #email, #number {
+#name, #email, #number, #dropdown {
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
     display: block;
     padding: 5px 10px;
     width: 100%;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
+}
+#name-label {
+    margin-top: 0;
+}
+#dropdown, #dropdown option {
+    color: var(--color-gray);
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
 }
 
+input[type='radio'] { 
+    margin-right: 5px;
+    transform: scale(1.5); 
+}
+input[type='checkbox'] { 
+    margin-right: 5px;
+    transform: scale(1.5); 
+}
+
+textarea {
+    display: block;
+    margin-top: 10px;
+    padding: 10px;
+    width: 100%;
+}
+
+#submit {
+    background-color: var(--color-green);
+    border: 1px solid var(--color-green);
+    border-radius: 4px;
+    color: var(--color-white);
+    margin-top: 30px;
+    padding: 8px 0;
+    width: 100%;
+}
