--- a/Responsive Web Design/Tribute Page/css/styles.css
+++ b/Responsive Web Design/Tribute Page/css/styles.css
@@ -2,41 +2,62 @@
 
 * {
     box-sizing: border-box;
-    padding: 0;
     margin: 0;
+    padding: 0;
 }
 main {
-    margin: 30px 10px;
     background-color: #eee;
-    font-family: 'Roboto', sans-serif;
     border: 1px solid #eee;
     border-radius: 5px;
-    padding: 30px 15px;
     color: #333;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.2px;
+    line-height: 1.6;
+    margin: 30px 10px;
+    padding: 30px 15px;
 }
 
 #title {
-    text-align: center;
     font-size: 2.5rem;
+    font-weight: bolder;
+    text-align: center;
     margin-top: 20px;
-    font-weight: bold;
 }
 #main > p {
-    text-align: center;
     margin-top: 20px;
+    text-align: center;
 }
 
 #img-div {
-    text-align: center;
+    background-color: white;
     display: block;
     margin-top: 20px;
-    background-color: white;
     padding: 15px;
+    text-align: center;
 }
 #image {
     max-width: 100%;
 }
 #img-caption {
-    margin-top: 15px;
     font-weight: 400;
+    margin-top: 15px;
+}
+
+.info {
+    margin: 0 auto;
+    max-width: 580px;
+}
+#tribute-info  h3 {
+    font-size: 1.2rem;
+    margin: 60px 0;
+    padding-left: 10px;
+    text-align: center;
+}
+#tribute-info ul li {
+    font-size: 0.95rem;
+    font-weight: 400;
+    margin-top: 20px;
+}
+.bold {
+    font-weight: bolder;
 }
