--- a/Responsive Web Design/Technical Documentation Page/css/styles.css
+++ b/Responsive Web Design/Technical Documentation Page/css/styles.css
@@ -9,15 +9,6 @@ body {
 #main-doc {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-#navbar {
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    width: 300px;
-    height: 100%;
-    background-color: #d8dceb;
-}
 #main-doc:not(navbar) {
     margin-left: 310px;
 }
@@ -29,6 +20,46 @@ code {
     background-color: #f7f7f7;
 }
 header {
-    font-size: 1.7rem;
     color: #191f3a;
+    font-size: 1.7rem;
 }
+
+
+/* NAVBAR */
+#navbar {
+    background-color: #d8dceb;
+    border-right: 2px solid #191f3a;
+    height: 100%;
+    left: 0;
+    padding-bottom: 30px;
+    position: fixed;
+    overflow-y: scroll;
+    top: 0;
+    width: 300px;
+    z-index: 1;
+}
+#navbar header {
+    font-size: 1.9rem;
+    margin: 15px 10px;
+    text-align: center;
+}
+.nav-link {
+    color: #3b4786;
+    border: 0.5px solid #191f3a;
+    border-left: none;
+    border-right: none;
+    display: block;
+    font-size: 1.1rem;
+    padding: 12px 30px;
+    text-align: left;
+    text-decoration: none;
+}
+.first {
+    border-top: none;
+}
+.last {
+    border-bottom: none;
+}
+
+
+/* SECTIONS */
