--- a/Responsive Web Design/Technical Documentation Page/css/styles.css
+++ b/Responsive Web Design/Technical Documentation Page/css/styles.css
@@ -3,25 +3,10 @@
     margin: 0;
 }
 body {
-    background-color: #d8dceb;
+    background-color: #e6eaf7ee;
 }
-
 #main-doc {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-#main-doc:not(navbar) {
-    margin-left: 310px;
-}
-p, li {
-    color: #3b4786;
-    font-size: 1.05rem;
-}
-code {
-    background-color: #f7f7f7;
-}
-header {
-    color: #191f3a;
-    font-size: 1.7rem;
 }
 
 
@@ -63,3 +48,38 @@ header {
 
 
 /* SECTIONS */
+#main-doc:not(navbar) {
+    margin-left: 310px;
+    padding: 30px;
+}
+
+.main-section {
+    margin-bottom: 50px;
+}
+header {
+    color: #191f3a;
+    font-size: 1.8rem;
+}
+
+p, li {
+    color: #3b4786;
+    font-size: 1.05rem;
+    line-height: 1.5;
+}
+p {
+    margin: 15px 0;
+    margin-left: 10px;
+}
+li {
+    margin-top: 15px;
+    margin-left: 20px;
+}
+code {
+    background-color: #f7f7f7;
+    border-radius: 3px;
+    display: block;
+    line-height: 2;
+    margin: 10px 20px;
+    padding: 20px;
+    white-space: pre-line;
+}
