--- a/Responsive Web Design/Personal Portfolio Webpage/css/styles.css
+++ b/Responsive Web Design/Personal Portfolio Webpage/css/styles.css
@@ -7,13 +7,14 @@
     3. HEADER
     4. MAIN
     5. FOOTER
-    6. MEDIA QUERIES
+    6. PSEUDO
+    7. MEDIA QUERIES
 */
 
 
 
 /* ==========
-    VARIABLES AND LINKS
+    1. VARIABLES AND LINKS
 ========== */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap');
 
@@ -27,7 +28,7 @@
 
 
 /* ==========
-    GENERAL STRUCTURE 
+    2. GENERAL STRUCTURE 
 ========== */
 * {
     box-sizing: border-box;
@@ -38,15 +39,41 @@ html {
     line-height: 1.4;
 }
 h1, h2 {
-    font-family: 'Raleway', sans-serif;
     color: var(--color-font-one);
+    font-family: 'Raleway', sans-serif;
 }
 body {
     font-family: 'Poppins', sans-serif;
 }
 a {
-    text-decoration: none;
     color: var(--color-font-two);
+    text-decoration: none;
 }
+#navbar a {
+    font-size: 22px;
+}
+
+
+/* ==========
+    3. HEADER
+========== */
+#navbar {
+    align-items: center;
+    background-color: var(--color-background-one);
+    box-shadow: 0 2px 0 rgb(0 0 0 / 40%);
+    display: flex;
+    justify-content: flex-end;
+    min-height: 70px;
+    position: sticky;
+    top: 0;
+    width: 100%;
+}
+#navbar a {
+    padding: 0 20px;
+}
+#navbar a:last-child {
+    margin-right: 30px;
+}
+
 
 
