--- a/Responsive Web Design/Personal Portfolio Webpage/css/styles.css
+++ b/Responsive Web Design/Personal Portfolio Webpage/css/styles.css
@@ -57,6 +57,7 @@ body {
 a {
     color: var(--color-font-two);
     text-decoration: none;
+    font-size: 1.5rem;
 }
 header {
     background-color: var(--color-background-one);
@@ -72,6 +73,21 @@ header {
     color: var(--color-font-three);
     font-style: italic;
 }
+#projects {
+    background-color: var(--color-background-two);
+}
+hr {
+    border: 1px solid var(--color-font-one);
+}
+.project-tile {
+    text-align: center;
+}
+.project-image img {
+    height: calc(95%);
+    width: calc(95%);
+}
+
+
 
 /* ==========
     3. HEADER
@@ -99,11 +115,25 @@ header {
     4.1 WELCOME
 */
 #welcome {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
 }
 
-
+/* 
+    4.2 PROJECTS
+*/
+#projects {
+    padding: 100px 20px;
+}
+#projects h2 {
+    text-align: center;
+}
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+    margin-top: 40px;
+}
